fix left hover uneven

--- a/style_01.css
+++ b/style_01.css
@@ -43,18 +43,18 @@
     transition: all 0.5s;
 }
 .clip1 {
-    background: url(./images/hover_effects2.jpg);
+    background: url(./images/hover_effect02.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 51% 0, 51% 100%, 0 100%);
+    clip-path: polygon(0 0, 60% 0, 40% 100%, 0 100%);
 }
 .clip2 {
-    background: url(./images/animations3.jpg);
-    background-size:cover;
+    background: url(./images/animations5.jpg);
+    background-size: cover;
     background-position: top;
-    clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+    clip-path: polygon(60% 0, 100% 0, 100% 100%, 40% 100%);
 }
-.container2:hover .clip{
+.container2:hover .clip2{
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 }
 .container2 .clip:hover{
